2010-05-22 robux4
New 0.8.1 version:
    - fix the infinite/unknown size reading in EbmlElement::FindNextElement()

2010-04-30 robux4/mosu
New 0.8.0 version:
    - new macros to simplify and unify the way to declare and define EBML elements
    - new macros to access variables of a Class/Object so that switching to libebml v2 is transparent
    - add an EBML_STRICT_API compilation flag (off by default) to avoid direct access to internal class variables
    - fix some building issues on Linux and MinGW
    - add accessor calls to the base classes to avoid direct access to internal class variables
    - add iterators to navigate throught the EbmlMaster children
    - use a new filepos_t type for everything that relates to an element position/data size with INVALID_FILEPOS_T in case of errors
    - remove the const on integer values


2008-02-21 22:14  mosu

	* trunk/libebml/ebml/EbmlBinary.h, trunk/libebml/ebml/EbmlEndian.h,
	  trunk/libebml/ebml/MemIOCallback.h,
	  trunk/libebml/ebml/c/libebml_t.h,
	  trunk/libebml/src/StdIOCallback.cpp: Fixes for the compilation
	  with gcc 4.3

2007-02-17 10:55  robux4

	* trunk/ARCorrect/ARCorrect.h, trunk/ARCorrect/ARCorrectFilter.h,
	  trunk/ARCorrect/ARCorrectPage.h, trunk/ARCorrect/ARCorrect_GUID.h,
	  trunk/ARCorrect/DShowUtils.h, trunk/ARCorrect/ITrackInfo.h,
	  trunk/ARCorrect/PersistPropertyBag.h, trunk/ARCorrect/resource.h,
	  trunk/DvdMenuXtractor/DvdMenuXtractor.proj,
	  trunk/DvdMenuXtractor/chaptermanager.h,
	  trunk/DvdMenuXtractor/config.h, trunk/DvdMenuXtractor/dmx.h,
	  trunk/DvdMenuXtractor/dmxconsole.h,
	  trunk/DvdMenuXtractor/dmxlogwidget.h,
	  trunk/DvdMenuXtractor/dmxselectionitem.h,
	  trunk/DvdMenuXtractor/dmxselectiontree.h,
	  trunk/DvdMenuXtractor/dmxwizard.h,
	  trunk/DvdMenuXtractor/libdvdread/dvdread/bswap.h,
	  trunk/DvdMenuXtractor/libdvdread/dvdread/cmd_print.h,
	  trunk/DvdMenuXtractor/libdvdread/dvdread/dvd_input.h,
	  trunk/DvdMenuXtractor/libdvdread/dvdread/dvd_reader.h,