@@ -134,8 +134,7 @@ extern const EbmlSemanticContext Context_EbmlGlobal;
 
 #define DEFINE_xxx_CLASS_ORPHAN(x,id,idl,name,global) \
     const EbmlId Id_##x    (id, idl); \
-    const EbmlSemanticContext Context_##x = EbmlSemanticContext(0, NULL, NULL, global, &EBML_INFO(x)); \
-    const EbmlCallbacks x::ClassInfos(x::Create, Id_##x, name, Context_##x); \
+    const EbmlSemanticContext Context_##x = EbmlSemanticContext(0, NULL, NULL, global, NULL); \
 
 #define DEFINE_EBML_CONTEXT(x)                             DEFINE_xxx_CONTEXT(x,*GetEbmlGlobal_Context)
 #define DEFINE_EBML_MASTER(x,id,idl,parent,name)           DEFINE_xxx_MASTER(x,id,idl,parent,name,*GetEbmlGlobal_Context)
@@ -178,6 +177,16 @@ extern const EbmlSemanticContext Context_EbmlGlobal;
         static const EbmlId & ClassId() {return ClassInfos.ClassId();} \
     private: \
 		static const EbmlCallbacks ClassInfos; \
+
+#define EBML_CONCRETE_DUMMY_CLASS(Type) \
+    public: \
+        virtual const EbmlSemanticContext &Context() const {return *static_cast<EbmlSemanticContext*>(NULL);} \
+        virtual const char *DebugName() const {return "DummyElement";} \
+		virtual operator const EbmlId &(); \
+        virtual EbmlElement & CreateElement() const {return Create();} \
+        virtual EbmlElement * Clone() const { return new Type(*this); } \
+		static EbmlElement & Create() {return *(new Type);} \
+        static const EbmlId & ClassId(); \
 
 
 #define EBML_INFO(ref)             ref::ClassInfo()
